--- a/WsPulse/appsettings.json
+++ b/WsPulse/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Polling": {
+    "IntervalSeconds": 60,
+    "TimeoutSeconds": 5,
+    "MaxParallel": 10
+  }
 }
